--- a/views/criteria.ejs
+++ b/views/criteria.ejs
@@ -8,10 +8,10 @@
 <body class="pho">
 
 <ul class="w3-sidebar w3-bar-block" style="background-color: rgb(186, 206, 145);width: 10%;">
-  <li><a class="w3-bar-item w3-button" href="home.html">Home</a></li>
-  <li><a class="w3-bar-item w3-button"href="criteria.html">Add Criteria</a></li>
+  <li><a class="w3-bar-item w3-button" href="/home">Home</a></li>
+  <li><a class="w3-bar-item w3-button"href="criteria">Add Criteria</a></li>
   <!-- <li><a class="w3-bar-item active" href="department.html">View Department</a></li> -->
-  <li ><a class="w3-bar-item w3-button" href="logout.html">Logout</a></li>
+  <li ><a class="w3-bar-item w3-button" href="/logout">Logout</a></li>
 </ul>
 
 
