--- a/views/Admission1.ejs
+++ b/views/Admission1.ejs
@@ -33,7 +33,7 @@
 <body >
 
 <ul class="w3-sidebar w3-dark-grey w3-bar-block p-4" style="width: 10%;color: aqua;">
-  <li><a class="w3-bar-item w3-button" href="/home">Home</a></li>
+  <li><a class="w3-bar-item w3-button" href="/studenthom">Home</a></li>
   <li><a class="active w3-bar-item " href="/Admission1">Admission</a></li>
   <li ><a class="w3-bar-item w3-button" href="/logout">Logout</a></li>
 </ul>
